Making sure all up to date

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="center jumbotron">
   <h1>Welcome To Our Project</h1>
 <h2>Interactive Technology For Concept Mastery Home Page</h2>
-<%= link_to "Sign Up", '#', class: "btn btn-lg btn-primary" %>
+<%= link_to "Sign Up", signup_path, class: "btn btn-lg btn-primary" %>
 </div>
 
 <%= image_tag("duoExample.svg", alt: "Duo logo", width: "200")%>
