Added link to learning on nav bar

--- a/app/views/static_pages/learning.html.erb
+++ b/app/views/static_pages/learning.html.erb
@@ -2,4 +2,9 @@
 <h1>Interactive Technology For Concept Mastery Learning Page</h1>
 <p>
   This is the learning page.
+
+  /learning/path
+  /learning/levels
+  /learning/skillsets
+  /learning/skills
 </p>
