--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,6 +5,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "Home", root_path %></li>
         <li><%= link_to "Help", help_path %></li>
+        <li><%= link_to "Learning", static_pages_learning_url %></li>
         <li><%= link_to "Log in", '#' %></li>
       </ul>
     </nav>
