--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -23,3 +23,42 @@ p { font-size: 1.1em;}
 #logo { float: left; margin-right: 10px; font-size: 1.7em; color: #fff;
   text-transform: uppercase; letter-spacing: -1px; padding-top: 9px; font-weight: bold; }
 #logo:hover { color: #fff; text-decoration: none; }
+
+/* dropdown */
+
+.dropbtn {
+  background-color: #222;
+  color: #999;
+  padding-top: 14px;
+  padding-left: 14px;
+  font-size: 1.1em;
+  font-weight: lighter;
+  border: none;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 90px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: #999;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {color: #000;}
+
+.dropdown:hover .dropdown-content {display: block;}
+
+.dropdown:hover .dropbtn {color: #fff;}
