--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,8 +5,13 @@
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "Home", root_path %></li>
         <li><%= link_to "Help", help_path %></li>
-        <li><%= link_to "Learning", static_pages_learning_url %></li>
-        <li><%= link_to "Log in", '#' %></li>
+        <div class="dropdown">
+          <button class="dropbtn">Drop</button>
+          <div class="dropdown-content">
+            <li><%= link_to "Learning", static_pages_learning_url %></li>
+            <li><%= link_to "Assessments", assessments_study_activities_url %></li>
+          </div>
+        </div>
       </ul>
     </nav>
   </div>
