--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,11 @@
   <body>
       <%= render 'layouts/header' %>
       <div class="container">
+        <% flash.each do |message_type, message| %>
+          <div class="alert alert-<%= message_type %>"><%= message %></div>
+        <% end %>
         <%= yield %>
+        <%= debug(params) if Rails.env.development? %>
     </div>
   </body>
 
