Fixed path of learning page

--- a/app/views/static_pages/learning.html.erb
+++ b/app/views/static_pages/learning.html.erb
@@ -1,10 +1,10 @@
 <% provide(:title, "Learning") %>
 <h1>Interactive Technology For Concept Mastery Learning Page</h1>
-<p>
-  This is the learning page.
-
-  /learning/path
-  /learning/levels
-  /learning/skillsets
-  /learning/skills
-</p>
+<br>
+<h3>Learning Path: /learning/path</h3>
+<br>
+<h3>Levels: /learning/levels</h3>
+<br>
+<h3>Skillsets: /learning/skillsets</h3>
+<br>
+<h3>Skills: /learning/skills</h3>
