--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,7 @@
         <div class="dropdown">
           <button class="dropbtn">Drop</button>
           <div class="dropdown-content">
-            <li><%= link_to "Learning", static_pages_learning_url %></li>
+            <li><%= link_to "Learning", learning_path %></li>
             <li><%= link_to "Assessments", assessments_study_activities_url %></li>
           </div>
         </div>
