--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,16 +2,36 @@
   <div class="container">
     <%= link_to "IT For Concept Mastery", root_path, id: "logo" %>
     <nav>
-      <ul class="nav navbar-nav navbar-right">
+      <div class="navbar-header">
+        <button id="hamburger" type="button" class="navbar-toggle collapsed">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+      </div>
+      <ul id="navbar-menu" class="nav navbar-nav navbar-right collapse navbar-collapse">
         <li><%= link_to "Home", root_path %></li>
         <li><%= link_to "Help", help_path %></li>
-        <div class="dropdown">
-          <button class="dropbtn">Drop</button>
-          <div class="dropdown-content">
-            <li><%= link_to "Learning", learning_path %></li>
-            <li><%= link_to "Assessments", assessments_study_activities_url %></li>
-          </div>
-        </div>
+        <% if logged_in? %>
+          <li class="dropdown">
+            <a href="#" id="account" class="dropdown-toggle">
+              Account <b class="caret"></b>
+            </a>
+            <ul id="dropdown-menu" class="dropdown-menu">
+              <li><%= link_to "Profile", current_user %></li>
+              <li><%= link_to "Learning", learning_path %></li>
+              <li><%= link_to "Assessments", assessments_study_activities_url %></li>
+              <li><%= link_to "Settings", '#' %></li>
+              <li class="divider"></li>
+              <li>
+                <%= link_to "Log out", logout_path, data: {"turbo-method": :delete } %>
+              </li>
+            </ul>
+          </li>
+        <% else %>
+          <li><%= link_to "Log in", login_path %></li>
+        <% end %>
       </ul>
     </nav>
   </div>
