--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
 
     <%= render 'layouts/shim' %>
+    <%= javascript_importmap_tags %>
   </head>
 
   <body>
