--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -21,7 +21,7 @@
             <ul id="dropdown-menu" class="dropdown-menu">
               <li><%= link_to "Profile", current_user %></li>
               <li><%= link_to "Account Settings", edit_user_path(current_user) %></li>
-                <li><%= link_to "Learning", learning_path %></li>
+                <li><%= link_to "Learning", learning_dashboard_path %></li>
               <%if current_user.admin > 1 %>
                 <li class="divider"></li>
                 <li><%= link_to "Assessments", assessments_study_activities_url %></li>
