--- a/app/views/learning/dashboard.html.erb
+++ b/app/views/learning/dashboard.html.erb
@@ -1,4 +1,12 @@
 <div class="center jumbotron">
   <h1>Learning Dashboard</h1>
-<h2>This is the</h2>
+<h2>Learn new skills and view your learning progress here.</h2>
+</div>
+<div>
+<h3>Skills to Learn:</h3>
+<h4>*List of skills available to learn*</h4>
+<h4><a href="/learning/skills" target="_blank">Skill</a></h4>
+<br>
+<h3>Skills Mastered:</h3>
+<h4>*List of skills user has mastered*</h4>
 </div>
