--- a/app/views/learning/skills.html.erb
+++ b/app/views/learning/skills.html.erb
@@ -1,4 +1,5 @@
 <div class="center jumbotron">
-  <h1>Skills</h1>
-<h2>Learn the ____ skill here.</h2>
+  <h1>*Skill*</h1>
+<h2>*Skill Description*</h2>
+<%= link_to "Learn Skill", learning_skills_path, class: "btn btn-lg btn-primary" %>
 </div>
