--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,5 +1,3 @@
-<% provide(:title, "Help") %>
-<h1>Interactive Technology For Concept Mastery Help Page</h1>
-<p>
-  This is the help page.
-</p>
+<div class="center jumbotron">
+  <h1>Help Center</h1>
+<h2>Get help with using our site here.</h2>
