--- a/app/views/learning/dashboard.html.erb
+++ b/app/views/learning/dashboard.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, "Learning") %>
 <div class="center jumbotron">
   <h1>Learning Dashboard</h1>
 <h2>Learn new skills and view your learning progress here.</h2>
