--- a/app/views/skills/index.html.erb
+++ b/app/views/skills/index.html.erb
@@ -4,7 +4,15 @@
 
 <div id="skills">
   <% @skills.each do |skill| %>
-    <%= render skill %>
+    <p>
+      <strong>Name:</strong>
+      <%= skill.name %>
+    </p>
+  
+    <p>
+      <strong>Description:</strong>
+      <%= skill.description %>
+    </p>
     <p>
       <%= link_to "Show this skill", skill %>
     </p>
