Updated quiz to display a correct/incorrect message

--- a/app/views/questions/_question.html.erb
+++ b/app/views/questions/_question.html.erb
@@ -9,7 +9,7 @@
     </ul>
     <div id="answer block" style.visibility = 'visible'>
          <p class="option">Answer: </p>
-        <ul class="answer"><li><%= question.answer %></li></ul>
+        <ul class="answer"><li><%= question.correct_answer %></li></ul>
     </div>
     <!--%= button_to "", @question, method: :delete %-->
     <!--<input type=button value="View the answer" onclick="console.log("here"); showHideDiv('answer block');">-->
