--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -11,7 +11,7 @@
   
     <p>
       <strong>A:</strong>
-      <%= question.answer %>
+      <%= question.correct_answer %>
     </p>
     <p>
       <%= link_to "Show this question", question %>
