--- a/app/views/skills/_skill.html.erb
+++ b/app/views/skills/_skill.html.erb
@@ -22,7 +22,7 @@
           </p>
         
           <p>
-            A: <%= question.answer %>
+            A: <%= question.correct_answer %>
           </p>
           <span class="hello"><%= link_to "View this question", question %></span>
         </li>
