--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -154,6 +154,15 @@ input {
   }
 }
 
+.choice {
+  margin-top: -10px;
+  margin-bottom: 10px;
+  span {
+    margin-left: 20px;
+    font-weight: normal;
+  }
+}
+
 #session_remember_me {
   width: auto;
   margin-left: 0;
@@ -212,3 +221,61 @@ input {
     margin-left: 0px;
   }
 }
+
+// radio-group{
+//   display: flex;
+//   flex-direction: column;
+//   text-align: left;
+//   choice {
+//     // display: block;
+//     margin-left: 10px;
+//     padding: 10px 0;
+//     width: auto;
+//   }
+// }
+
+// .choice input[type="radio"] {
+//   float: right;
+//   margin-right: 10px;
+//   text-align: helloooo;
+// }
+
+.radio-group {
+  // display: flex;
+  // flex-direction: column;
+}
+
+// .radio-group input[type="radio"] {
+//   // display: none; /* Hide default radio buttons */
+// }
+
+// .radio-group label {
+//   display: inline-block;
+//   margin-bottom: 8px;
+//   cursor: pointer;
+//   position: relative;
+// }
+
+// .radio-group label:before {
+//   content: '';
+//   display: inline-block;
+//   width: 16px;
+//   height: 16px;
+//   border: 2px solid #ccc;
+//   border-radius: 50%;
+//   margin-right: 8px;
+// }
+
+// .radio-group input[type="radio"]:checked + label:before {
+//   background-color: #007bff; /* Change background color when checked */
+// }
+
+// /* Add a dot inside the radio button when checked */
+// .radio-group input[type="radio"]:checked + label:before {
+//   content: '\2022';
+//   color: white;
+//   font-size: 20px;
+//   text-align: center;
+//   line-height: 16px;
+// }
+
