--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,7 +1,7 @@
 <%= render @question %>
 <div>
   <!-- %= link_to "Edit this question", edit_question_path(@question) %|--> 
-  <%= link_to "Back to skills", skills_path %>
+  <%= link_to "Back to skill", skill_path %>
 
   <%= button_to "Destroy this question", @question, method: :delete %>
 </div>
