--- a/app/views/skills/quiz.html.erb
+++ b/app/views/skills/quiz.html.erb
@@ -1,8 +1,11 @@
 <p style="color: green"><%= notice %></p>
 <h1>Quiz:</h1>
 <p>Question <%= @curr_id + 1 %>: <%= @curr_question.content  %></p>
+<% if @curr_att > 0 %>
+  <p>Current Score: <%= @curr_score %> / <%= @curr_att %></p>
+<% end %>
 <% if @curr_question.answer_choices.count > 0 %>
-    <%= form_tag submit_answer_path, method: :post do %>
+    <%= form_tag submit_answer_path(s_id: @skill.id, q: @curr_id, c: @curr_score, a: @curr_att), method: :post do %>
       <div class="radio-group">
         <% @curr_question.answer_choices.each do |option| %>
           <div class="choice">
@@ -14,7 +17,7 @@
       <%= submit_tag "Submit", id: "submit-btn" %>
     <% end %>
 <% else %>
-    <%= form_tag submit_text_answer_path(question_id: @curr_question.id), method: :post do %>
+    <%= form_tag submit_text_answer_path(s_id: @skill.id, q: @curr_id, q_id: @curr_question.id, c: @curr_score, a: @curr_att), method: :post do %>
       <div class="radio-group">
         <%= label_tag(:answer, "Answer:") %>
         <%= text_field_tag(:answer) %>
@@ -22,7 +25,7 @@
       <%= submit_tag "Submit", id: "submit-btn" %>
     <% end %>
 <% end %>
-<%= link_to '<button>Next Question</button>'.html_safe, quiz_skill_path(q: @curr_id) %> <!--, class: 'btn btn-danger btn-xs pull-right', style:'margin-right: 600px; margin-top: -20px'-->
+<%= link_to '<button>Next Question</button>'.html_safe, quiz_skill_path(q: @curr_id + 1, c: @curr_score, a: @curr_att) %> <!--, class: 'btn btn-danger btn-xs pull-right', style:'margin-right: 600px; margin-top: -20px'-->
 <!--%= render @skill %-->
 
 <div>
