--- a/app/views/skills/quiz.html.erb
+++ b/app/views/skills/quiz.html.erb
@@ -1,10 +1,14 @@
 <% provide(:title, "Quiz") %>
 <p style="color: green"><%= notice %></p>
 <h1>Assessment: <%= @skill.name %></h1>
+<div class="score">
+  <p>
+    <% if @curr_att > 0 %>
+      Current Score: <%= @curr_score %> / <%= @curr_att %>
+    <% end %>
+  </p>
+</div>
 <p>Question <%= @curr_id + 1 %>: <%= @curr_question.content  %></p>
-<% if @curr_att > 0 %>
-  <p>Current Score: <%= @curr_score %> / <%= @curr_att %></p>
-<% end %>
 <% if @curr_question.answer_choices.count > 0 %>
     <%= form_tag submit_answer_path(s_id: @skill.id, q: @curr_id, c: @curr_score, a: @curr_att), method: :post do %>
       <div class="radio-group">
@@ -33,6 +37,8 @@
 <% if @curr_att == @curr_id + 1 %>
   <%= link_to '<button>Next Question</button>'.html_safe, quiz_skill_path(q: @curr_id + 1, c: @curr_score, a: @curr_att) %> <!--, class: 'btn btn-danger btn-xs pull-right', style:'margin-right: 600px; margin-top: -20px'-->
 <% end %>
+<br/>
+<br/>
 <!--%= render @skill %-->
 
 <div>
