--- a/app/views/questions/_bar_chart.html.erb
+++ b/app/views/questions/_bar_chart.html.erb
@@ -16,7 +16,36 @@
     <%= form.text_area :content, rows: 4 %>
   </div>
   
-  <%= render "draggable_graph" %>
+  <html>
+  <head>
+  <script type="text/javascript">
+	
+		var chart = new CanvasJS.Chart("chartContainer", {
+			title:{
+				text: "My First Chart in CanvasJS"              
+			},
+			data: [              
+			{
+				// Change type to "doughnut", "line", "splineArea", etc.
+				type: "column",
+				dataPoints: [
+					{ label: "apple",  y: 10  },
+					{ label: "orange", y: 15  },
+					{ label: "banana", y: 25  },
+					{ label: "mango",  y: 30  },
+					{ label: "grape",  y: 28  }
+				]
+			}
+			]
+		});
+		
+		chart.render();
+	</script>
+	</head>
+	<body>
+	<div id="chartContainer" style="height: 300px; width: 100%;"></div>
+	</body>
+	</html>
 
   <!-- should only put heading once and choose on option -->
   <%= form.fields_for :answer_choices do |answer_fields| %>
