--- a/app/views/questions/_multiple_choice.html.erb
+++ b/app/views/questions/_multiple_choice.html.erb
@@ -12,6 +12,7 @@
   <% end %>
   
   <%= form.hidden_field :question_type, value: graph_type_placeholder %>
+  <%= form.hidden_field :graph_content, value: "Placeholder Title" %>
 
   <div>
     <%= form.label :content, "Multiple Choice Question", style: "display: block" %>
