--- a/app/views/skills/quiz.html.erb
+++ b/app/views/skills/quiz.html.erb
@@ -31,6 +31,11 @@
       <% end %>
     <% end %>
 <% else %>
+
+    <% question_type_partial = @curr_question.question_type %>
+    <%= render partial: question_type_partial,
+    locals: {question: @curr_question} %>
+
     <%= form_tag submit_text_answer_path(s_id: @skill.id, q: @curr_id, q_id: @curr_question.id, c: @curr_score, a: @curr_att), method: :post do %>
       <div class="radio-group">
         <%= label_tag(:answer, "Answer:") %>
